--- a/css/styles.css
+++ b/css/styles.css
@@ -5,8 +5,10 @@ html {
 *::after {
   box-sizing: inherit;
 }
-.root {
+:root {
   --card-set-gap: 24px;
+  --brand-color: #4d5ae5;
+  --brand-color 
 }
 body {
   font-family: "Raleway", sans-serif;
@@ -53,10 +55,10 @@ body {
   left: 348px;
   top: 24px;
   font-family: 'Roboto';
-font-style: normal;
-font-weight: 600;
-font-size: 16px;
-line-height: 24px;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 1.5;
   list-style: none;
   margin-top: auto;
   flex: none;
@@ -68,7 +70,7 @@ line-height: 24px;
 }
 .menu .link:hover,
 .menu .link:focus {
-  color: #4d5ae5;
+  color: var(--brand-color);
 }
 
 .menu .link {
@@ -77,7 +79,7 @@ line-height: 24px;
 }
 
 .menu .link:click {
-  color: #4d5ae5;
+  color: var(--brand-color);
 }
 .webStudio {
   display: flex;
@@ -90,21 +92,21 @@ line-height: 24px;
   left: 156px;
   top: 24px;
   font-family: 'Raleway';
-font-style: normal;
-font-weight: 800;
-font-size: 18px;
-line-height: 24px;
-text-decoration: none;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 24px;
+  text-decoration: none;
 }
 .navigation-item {
-  color: #4d5ae5;
+  color: var(--brand-color);
 }
 .infodevstudio {
   font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 24px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
   position: absolute;
   width: 153px;
   height: 24px;
@@ -116,20 +118,20 @@ line-height: 24px;
 }
 .infodevstudio:hover,
 .infodevstudio:focus {
-  color: #4d5ae5;
+  color:var(--brand-color);
 }
 
 .fone:hover,
 .fone:focus {
-  color:#4d5ae5;
+  color:var(--brand-color);
 }
 
 .fone {
   font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 24px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
   position: absolute;
   width: 151px;
   height: 24px;
@@ -159,7 +161,7 @@ line-height: 24px;
   font-style: normal;
   font-weight: 600;
   font-size: 56px;
-  line-height: 60px;
+  line-height: 1.07;
   letter-spacing: 0.02em;
   width: 500px;
   padding-top: 192px;
@@ -177,11 +179,11 @@ line-height: 24px;
   font-style: normal;
   font-weight: 600;
   font-size: 16px;
-  line-height: 19px;
+  line-height: 1.1875;
   display: block;
   margin-left: auto;
   margin-right: auto;
-  background: #4d5ae5;
+  background:var(--brand-color);
   border: 1px solid #000000;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
@@ -196,10 +198,10 @@ button .link:click {
   color: #404bbf;
 }
 button .link:hover {
-  color: #4d5ae5;
+  color: var(--brand-color);
 }
 button .link:default {
-  color: #4d5ae5;
+  color: var(--brand-color);
 }
 
 .card-set {
@@ -211,37 +213,22 @@ button .link:default {
   padding-left: 0;
   margin-top: 120px;
 }
-.text-strategy{
+.text-strategy .text-foto-port{
   font-family: 'Roboto';
-font-style: normal;
-font-weight: 600;
-font-size: 20px;
-line-height: 24px;
-letter-spacing: 0.02em;
-color: #2E2F42;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2E2F42;
 }
-.text-foto-port{
-  font-family: 'Roboto';
-font-style: normal;
-font-weight: 600;
-font-size: 20px;
-line-height: 24px;
-letter-spacing: 0.02em;
-color: #2E2F42;
-}
+
 .card-set > .straegy,
 .punctuality,
 .diligence {
   flex-basis: calc(100% / 4);
 }
-.ourprinciples-title {
-  /*color: white;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 0px;
-  gap: 8px;*/
-}
+
 .straegy,
 .punctuality,
 .diligence,
@@ -255,13 +242,13 @@ color: #2E2F42;
 .technologies-title {
   width: 264px;
   height: 72px;
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 24px;
-letter-spacing: 0.02em;
-color: #434455;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
 }
 
 .ourprinciples-title {
@@ -280,14 +267,14 @@ color: #434455;
 }
 .what-title {
   font-family: 'Roboto';
-font-style: normal;
-font-weight: 600;
-font-size: 36px;
-line-height: 40px;
-text-align: center;
-letter-spacing: 0.02em;
-text-transform: capitalize;
-color: #2E2F42;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: #2E2F42;
   
 }
 .auto-layout {
@@ -311,7 +298,7 @@ color: #2E2F42;
   font-style: normal;
   font-weight: 600;
   font-size: 36px;
-  line-height: 40px;
+  line-height: 1.11;
   text-align: center;
   letter-spacing: 0.02em;
   text-transform: capitalize;
@@ -325,27 +312,27 @@ color: #2E2F42;
   
 }
 .text-foto{
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 600;
-font-size: 20px;
-line-height: 24px;
-text-align: center;
-letter-spacing: 0.02em;
-color: #2E2F42;
-margin-top: 32px;
-margin-bottom: 0;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 1.2;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: #2E2F42;
+  margin-top: 32px;
+  margin-bottom: 0;
 }
 .text-pr{
   font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 24px;
-text-align: center;
-letter-spacing: 0.02em;
-color: #434455;
-margin-top: 8px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: #434455;
+  margin-top: 8px;
 }
 .item {
   display: flex;
@@ -362,7 +349,7 @@ margin-top: 8px;
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   border-radius: 0px 0px 4px 4px;
   padding-left: auto;
-margin-bottom: 120px;
+  margin-bottom: 120px;
 }
 .foto {
   border: 1px solid #000000;
@@ -384,7 +371,7 @@ margin-bottom: 120px;
 }
 
 .lowerpart-item {
-  color: #4d5ae5;
+  color: var(--brand-color);
   background-color: #000000;
   background: #2e2f42;
   border: 1px solid #000000;
@@ -394,10 +381,10 @@ margin-bottom: 120px;
 
 .lowerpart-title {
   font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 24px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
   letter-spacing: 0.02em;
   display: block;
   color: #e7e9fc;
@@ -419,45 +406,44 @@ line-height: 24px;
   width: 586px;
   gap: 24px;
   display: flex;
- margin-top: 101px;
- margin-bottom: 64px;
+  margin-top: 101px;
+  margin-bottom: 64px;
   margin-left: auto;
   margin-right: auto;
 }
 .block-button {
-  
-flex-direction: row;
-justify-content: center;
-align-items: center;
-background: #F4F4FD;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background: #F4F4FD;
 }
 .button-portfolio {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 600;
   font-size: 16px;
-  line-height: 24px;
+  line-height: 1.5;
   display: flex;
-align-items: center;
-text-align: center;
-letter-spacing: 0.04em;
- margin-left: auto;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.04em;
+  margin-left: auto;
   margin-right: auto;
   background: #F4F4FD;
-color: #4D5AE5;
-border: 1px solid #E7E9FC;
-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  color:var(--brand-color);
+  border: 1px solid #E7E9FC;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 
-border-radius: 4px;
-flex: none;
-order: 0;
-flex-grow: 0;
-padding: 8px 16px;
+  border-radius: 4px;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+  padding: 8px 16px;
 }
 .button-portfolio:hover,
 .button-portfolio:focus {
   cursor: pointer;
-  background: #4D5AE5;
+  background: var(--brand-color);
   color: #FFFFFF;
 }
 .many {
@@ -473,27 +459,27 @@ padding: 8px 16px;
   display: inline-block;
   gap: 24px;
   box-sizing: border-box;
-width: 360px;
-height: 420px;
-margin: 0 24px 50px;
-left: 156px;
-top: 285px;
-background: #FFFFFF;
-border: 0.5px solid #F4F4FD;
-box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
+  width: 360px;
+  height: 420px;
+  margin: 0 24px 50px;
+  left: 156px;
+  top: 285px;
+  background: #FFFFFF;
+  border: 0.5px solid #F4F4FD;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .fototext-title {
-display: inline-block;  
+  display: inline-block;  
   width: 360px;
   height: 300px;
   margin: 0 24px;
-  background-color: #4d5ae5;
+  background-color: var(--brand-color);
   margin-bottom: px;
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
-  line-height: 24px;
+  line-height: 1.5;
   letter-spacing: 0.02em;
   list-style: none;
   
@@ -508,7 +494,7 @@ display: inline-block;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
-  line-height: 24px;
+  line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
   margin-left: auto;
@@ -537,16 +523,16 @@ display: inline-block;
 
 .text-port{
   font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 24px;
-letter-spacing: 0.02em;
-color: #434455;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
 }
 .foto-portfolio{
   width: 360px;
-height: 300px;
-left: 0px;
-top: 0px;
+  height: 300px;
+  left: 0px;
+  top: 0px;
 }
