--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,7 @@ body {
 }
 .beginning {
   display: flex;
-  background-color: var(--brand-color-white);
+  background-color: var(--brand-color-white-background);
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
   width: 1440px;
@@ -491,14 +491,7 @@ button .link:default {
   list-style: none;
   
 }
-.cashless-payment {
-  width: 360px;
-  margin-top: 190px;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: var(--brand-color-black);
-}
+
 .text-title {
   width: 296px;
   font-family: "Roboto";
